tests/NormalTests/paczka1/fuzzy1/22249364.err
Error in line 5: RFb S786 12,2
Error in line 10: GHNOGZ3vjq S786 7,2
Error in line 14: GHNOGZ3vjq S798 32,9
Error in line 23: zxYK5 S154 16,2
Error in line 6: RFb S798 88,9
Error in line 22: v67qVN A778 0,1
Error in line 24: GHNOGZ3vjq S154 26,9
Error in line 26: RFb S786 95,1
